--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^3.2.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0"
